# showcase-renovate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.renovate  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  renovate.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  renovate-custom-image.yml  renovate-slim-image.yml
.renovate/: config.js
showcase/: app.py
tests/showcase_renovate/: test_app.py
